2009-12-14  Petr Ovtchenkov  <ptr@void-ptr.info>

	* vtime.cc: set stem::__Event_Base::vs flag
	for event after vs_event_origin call---give
	chance to distinguish original event from
	derivated one during recovery from history;

	* libjanus: revision 0.11.5.

2009-11-16  Petr Ovtchenkov  <ptr@void-ptr.info>

	* vtime.h, vtime.cc: basic_vs object
	make attempt to notify some group member about
	own end-of-life; on such notification basic_vs
	[that remain in group] initiate view update;
	this view update faster then fail detection,
	because not try to wait responce from exited
	object;

	* vtime.h, vtime.cc: 'delayed queue' was renamed
	to 'order violated events queue';
	added 'delayed queue'---events that wait
	something like 'view update' to departure;

	* libjanus: revision 0.11.4.

2009-11-10  Petr Ovtchenkov  <ptr@void-ptr.info>

	* vtime.h, vtime.cc: added send_to_vsg and
	forward_to_vsg functions, that send/forward
	event to all current group members, except
	self; this functions use info about 
	virtual synchronity group members, but
	not influence virtual time;

	* libjanus: revision 0.11.3;

	* vtime.h, vtime.cc: vs_join return 0 if
	target address accessible, and non-zero
	code otherwise;

	* libjanus: revision 0.11.2.

2009-10-29  Petr Ovtchenkov  <ptr@void-ptr.info>

	* vtime.h, vtime.cc: vs_group_size return
	group size (0, if not in group);

	* libjanus: revision 0.11.1.

2009-10-22  Petr Ovtchenkov  <ptr@void-ptr.info>

	* vtime.h, vtime.cc: node treated as failed
	when lock ack not received within specified
	timeout [now happens when accept new member
	into group or during flush message
	processing]; VS_LEAVE removed [required actions
	will be	done when fail will be detected;
	in other cases we has no interest for special
	processing];

	* libjanus: revision 0.11.0.

2009-10-15  Petr Ovtchenkov  <ptr@void-ptr.info>

	* Repo: interface and test [may be used as
	sample] for state recovery during join
	to group.
	
	* libjanus: revision 0.10.0.
