@@ -1,4 +1,4 @@
-// -*- C++ -*- Time-stamp: <09/11/13 23:21:33 ptr>
+// -*- C++ -*- Time-stamp: <09/12/14 20:20:57 ptr>
 
 /*
  *
@@ -335,11 +335,11 @@ class basic_vs :
     int vs_join( const stem::addr_type&, const sockaddr_in& );
     int vs_join( const char*, int );
     int vs_join( const sockaddr_in& );
-    void vs( const stem::Event& );
+    int vs( const stem::Event& );
 
     template <class D>
-    void vs( const stem::Event_base<D>& e )
-      { basic_vs::vs( stem::detail::convert<stem::Event_base<D>,stem::Event>()(e) ); }
+    int vs( const stem::Event_base<D>& e )
+      { return basic_vs::vs( stem::detail::convert<stem::Event_base<D>,stem::Event>()(e) ); }
     void vs_send_flush();
     size_type vs_group_size() const;
 
